Update CSS : update css file to make sure the paragraph is readable in portofolio section again.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1676,3 +1676,34 @@ figure.dotted-bg {
       .site-footer .social li a:hover {
         background: #36a1ff;
         color: #ffffff; }
+
+
+
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* puts text at the bottom */
+  padding: 20px; /* important */
+  opacity: 0;
+  transition: 0.3s ease;
+}
+
+.portfolio-item:hover .overlay {
+  opacity: 1;
+}
+
+.portfolio-item-content h3,
+.portfolio-item-content p {
+  margin: 0;
+  color: #fff;
+}
+
+.portfolio-item-content p {
+  margin-top: 5px;
+  font-size: 14px;
+  line-height: 1.4; /* fix overlapping */
+}
